drm/i915: Defer disabling output polling until after we cancel hpd work

intel_hpd_cancel_work() cancels a task that wants to enable output
polling. If we lose a race here, that task can run after we have already
tried to disable output polling for suspend - leaving output polling
enabled as we go to sleep, and running immediately upon resume.

Fixes: 19625e85c6ec ("drm/i915: Enable polling when we don't have hpd")
References: https://bugs.freedesktop.org/show_bug.cgi?id=98040
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Cc: Ville Syrjälä <ville.syrjala@linux.intel.com>
Cc: Daniel Vetter <daniel.vetter@ffwll.ch>
Cc: Lyude <cpaul@redhat.com>
Cc: stable@vger.kernel.org